Fixed Tableau image, added wrap to skills and technologies

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ body {
     position: fixed;
     top: 10px;
     right: 10px;
-    background-color: #4CAF50;
+    background-color: #ad4caf;
     color: white;
     padding: 10px;
     border: none;
@@ -111,6 +111,7 @@ body {
     list-style: none;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
   }
